Fixed overflow + Nav in-class example

--- a/Lesson2/CSS/dessign.css
+++ b/Lesson2/CSS/dessign.css
@@ -10,6 +10,20 @@ header{
     /*use the google font*/    
 }
 
+/*just trying to get fancy with my nav bar*/
+.navbar{
+    overflow: hidden;
+    background-color:#063852;
+    border: black;
+}
+
+.navbar a{
+    float:left;
+    text-align:center;
+    padding: 10px 15px;
+    text-decoration: none;
+}
+
 body{
     background-color: #063852;
     color: #f0810f;
@@ -28,7 +42,7 @@ section{
     border-radius: 10px;
     text-align: center;
     max-height: 500px;
-    overflow:hidden;
+    overflow: scroll;
 }
 
 img{
@@ -43,19 +57,7 @@ a:visited{
     color:#e6df44;
 }
 
-/*just trying to get fancy with my nav bar*/
-.navbar{
-    overflow: hidden;
-    background-color:#063852;
-    border: black;
-}
 
-.navbar a{
-    float:left;
-    text-align:center;
-    padding: 10px 15px;
-    text-decoration: none;
-}
 
 footer{
     background-color:#011a27;
